--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,9 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/signup"
+        android:layout_below="@+id/logo"
         android:layout_gravity="center"
-        android:layout_marginTop="495dp"
+        android:layout_marginTop="226dp"
         android:layout_weight="1"
         android:rotation="0"
         android:rotationX="0"
@@ -44,8 +44,9 @@
         android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_marginTop="32dp"
+        android:layout_marginBottom="97dp"
         android:layout_weight="1"
         android:text="@string/sign_up"
         android:textStyle="bold"
