--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/login_container"
+        android:id="@+id/login"
+        android:layout="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
