--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@drawable/splash_background"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="133dp"
+        android:layout_weight="1">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="578dp"
+            tools:ignore="UselessParent">
+
+            <ImageView
+                android:id="@drawable/logo_transparent"
+                android:layout_width="57dp"
+                android:layout_height="63dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="11dp"
+                android:layout_marginBottom="390dp"
+                android:padding="10dp"
+                android:src="@drawable/ic_filter"
+                tools:ignore="ContentDescription" />
+
+            <SearchView
+                android:id="@+id/search_recipe"
+                android:layout_width="309dp"
+                android:layout_height="70dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="383dp"
+                android:iconifiedByDefault="false"
+                android:queryBackground="@android:color/transparent"
+                android:queryHint="Search Services"
+                android:theme="@style/Widget.AppCompat.SearchView"
+                app:queryBackground="@android:color/transparent" />
+
+            <TextView
+                android:id="@+id/title_bold"
+                android:layout_width="395dp"
+                android:layout_height="57dp"
+                android:layout_marginStart="15dp"
+                android:text="Laundry Service"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-black"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="397dp"
+                android:layout_height="63dp"
+                android:layout_below="@+id/title_bold"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="-1dp"
+                android:text="Discover"
+                android:textColor="@color/black"
+                android:textSize="24sp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:gravity="center_horizontal">
+
+        </RelativeLayout>
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Pesa.AppBarOverlay">
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include layout="@layout/content_main" />
-
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="match_parent"
-        android:layout_height="271dp"
-        android:layout_gravity="top|center_horizontal"
-        android:background="#FFFCFC"
-        android:contentDescription="company logo"
-        android:scaleType="centerCrop"
-        android:src="@drawable/logo" />
-
-    <Button
-        android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:layout_gravity="center"
-        android:layout_marginTop="226dp"
-        android:layout_weight="1"
-        android:rotation="0"
-        android:rotationX="0"
-        android:rotationY="0"
-        android:text="@string/login"
-        android:textStyle="bold"
-        android:verticalScrollbarPosition="right" />
-
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="97dp"
-        android:layout_weight="1"
-        android:text="@string/sign_up"
-        android:textStyle="bold"
-        android:verticalScrollbarPosition="left" />
+        android:background="@drawable/splash_background"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottomnav">
 
-</RelativeLayout>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+</LinearLayout>
